name:                kademlia
version:             0.1.0.0
synopsis:            An implementation of the Kademlia DHT Protocol
description:         An implementation of the Kademlia DHT Protocol
category:            Network

license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

author:              fro_ozen
maintainer:          fro_ozen@gmx.de
homepage:            https://github.com/froozen/kademlia
bug-reports:         https://github.com/froozen/kademlia/issues

source-repository head
    type:       git
    location:   https://github.com/froozen/kademlia.git

library
  exposed-modules:     Network.Kademlia, Network.Kademlia.Networking,
                       Network.Kademlia.Types, Network.Kademlia.Protocol,
                       Network.Kademlia.Protocol.Parsing, Network.Kademlia.Tree,
                       Network.Kademlia.Instance, Network.Kademlia.ReplyQueue
                       Network.Kademlia.Implementation
  build-depends:       base >=4.7, network >=2.6 && <2.7, mtl >=2.1.3.1,
                       bytestring >=0.10 && <0.11, transformers >=0.3,
                       containers >=0.5.5.1, stm >=2.4.3,
                       transformers-compat >=0.3.3
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite library-test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  other-modules:       Protocol, Networking, TestTypes, Types, Tree, Instance
                       ReplyQueue
  default-language:    Haskell2010
  build-depends:       base, tasty >= 0.10.1, tasty-quickcheck >= 0.8.3.1,
                       tasty-hunit >= 0.9.0.1 , HUnit >= 1.2.5.2,
                       QuickCheck >= 2.4, network >= 2.6, mtl >= 2.1.3.1,
                       transformers >= 0.3, Cabal >= 1.18.1,
                       bytestring >= 0.10.4.0, stm >=2.4.3, kademlia,
                       transformers-compat >=0.3.3
