name:                kademlia
version:             1.1.0.0
homepage:            https://github.com/froozen/kademlia
bug-reports:         https://github.com/froozen/kademlia/issues
synopsis:            An implementation of the Kademlia DHT Protocol
description:
    .
    A haskell implementation of the Kademlia distributed hashtable, an efficient
    way to store and lookup values distributed over a P2P network.
    .
    The implementation is based on the paper
    /Kademlia: A Peer-to-peer Information System Based on the XOR Metric/:
    <http://pdos.csail.mit.edu/~petar/papers/maymounkov-kademlia-lncs.pdf>)
    by Petar Maymounkov and David Mazières.
    .
    This library aims to be very simple and pleasant to use, with the downside of
    deciding some of the implementation details, like timeout intervals and
    k-bucket size, for the user.

license:             BSD3
license-file:        LICENSE
author:              fro_ozen <fro_ozen@gmx.de>
maintainer:          fro_ozen <fro_ozen@gmx.de>
category:            Network

build-type:          Simple
cabal-version:       >=1.10

source-repository head
    type:       git
    location:   https://github.com/froozen/kademlia.git

library
  exposed-modules:     Network.Kademlia

  other-modules:       Network.Kademlia.Networking, Network.Kademlia.Types,
                       Network.Kademlia.Protocol, Network.Kademlia.Instance,
                       Network.Kademlia.Protocol.Parsing, Network.Kademlia.Tree,
                       Network.Kademlia.ReplyQueue,
                       Network.Kademlia.Implementation

  build-depends:       base >= 4.7 && < 5,
                       network >=2.6 && <2.7,
                       mtl >=2.1.3.1,
                       bytestring >=0.10.2 && <0.11,
                       transformers >=0.3,
                       containers >=0.5.5.1,
                       stm >=2.4.3,
                       transformers-compat >=0.3.3

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite library-test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test, src
  other-modules:       Protocol, Networking, TestTypes, Types, Tree, Instance,
                       ReplyQueue, Implementation,
                       Network.Kademlia.Networking, Network.Kademlia.Types,
                       Network.Kademlia.Protocol, Network.Kademlia.Instance,
                       Network.Kademlia.Protocol.Parsing, Network.Kademlia.Tree,
                       Network.Kademlia.ReplyQueue,
                       Network.Kademlia.Implementation

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       network >=2.6 && <2.7,
                       mtl >=2.1.3.1,
                       bytestring >=0.10.2 && <0.11,
                       transformers >=0.3,
                       containers >=0.5.5.1,
                       stm >=2.4.3,
                       transformers-compat >=0.3.3,
                       tasty >= 0.10.1,
                       tasty-quickcheck >= 0.8.3.1,
                       QuickCheck >= 2.4,
                       tasty-hunit >= 0.9.0.1,
                       HUnit >= 1.2.5.2
